# c3qts_factor

./: .gitignore  LICENSE  README.en.md  README.md  TODOList.md  factor_system.py  generate_example.py  install.sh  requirements.txt  setup.cfg  setup.py
c3qts_factor/: __init__.py  factor.py  factor_system.py  utils.py
demo/: generate_example.py  test_factor.py  test_remove.py
factor_class/cyh/: test_factor.py
