[metadata]
name = c3qts_factor
version = 0.0.1
license = MIT
author = Sihang Chen
author_email = 1466196675@qq.com
description = The core module of the quantitative trading system
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
zip_safe = False
# install_requires = 
#     pymongo==3.12.3
